ENYO-2255: fixed gradient on IE-10

--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -46,7 +46,7 @@
 	background: -o-linear-gradient(left,  @opaque 0%,@see-through 100%); /* Opera 11.10+ */
 
 	// tested
-	background: -ms-linear-gradient(left,  @opaque 0%,@see-through 100%); /* IE10+ */
+	background: -ms-linear-gradient(left, @see-through 0%, @opaque 100%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=argb(@see-through), endColorstr=argb(@opaque),GradientType=1 ); /* IE6-9 */
 }
 
